添加图标字体 font-awesome

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "fastclick": "^1.0.6",
     "file-loader": "^0.8.5",
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "^0.0.5-beta.2",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-content-includer": "0.0.7",
@@ -32,9 +34,11 @@
     "handlebars-loader": "^1.1.4",
     "install": "^0.6.1",
     "jquery": "^3.2.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "merge-stream": "^1.0.0",
     "npm": "^3.8.3",
-    "style-loader": "^0.13.0",
+    "style-loader": "^0.13.2",
     "through2": "^2.0.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
